added API definition for Host
