# pkg/api/sgroups/v1/services.swagger.json
@@ -12,6 +12,10 @@
     {
       "name": "SGroupsAddressGroupsAPI",
       "description": "AddressGroups Resource API"
+    },
+    {
+      "name": "SGroupsHostsAPI",
+      "description": "Hosts Resource API"
     }
   ],
   "schemes": [
@@ -167,6 +171,220 @@
         ],
         "tags": [
           "AddressGroup"
+        ]
+      }
+    },
+    "/v1/host/delete": {
+      "post": {
+        "summary": "Delete: Delete host(s)",
+        "description": "Delete: Delete host(s)",
+        "operationId": "SGroupsHostsAPI_Delete",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1HostReqDelete"
+            }
+          }
+        ],
+        "tags": [
+          "Host"
+        ]
+      }
+    },
+    "/v1/host/list": {
+      "post": {
+        "summary": "List: List host(s)",
+        "description": "List: List host(s)",
+        "operationId": "SGroupsHostsAPI_List",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1HostRespList"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1HostReqList"
+            }
+          }
+        ],
+        "tags": [
+          "Host"
+        ]
+      }
+    },
+    "/v1/host/upd-iplist": {
+      "post": {
+        "summary": "UpdIPs: Update host(s) IP list",
+        "description": "UpdIPs: Update host(s) IP list",
+        "operationId": "SGroupsHostsAPI_UpdIPs",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1HostRespUpdIPs"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1HostReqUpdIPs"
+            }
+          }
+        ],
+        "tags": [
+          "Host"
+        ]
+      }
+    },
+    "/v1/host/upd-metainfo": {
+      "post": {
+        "summary": "UpdMetaInfo: Update host(s) meta information",
+        "description": "UpdMetaInfo: Update host(s) meta information",
+        "operationId": "SGroupsHostsAPI_UpdMetaInfo",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1HostRespUpdMetaInfo"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1HostReqUpdMetaInfo"
+            }
+          }
+        ],
+        "tags": [
+          "Host"
+        ]
+      }
+    },
+    "/v1/host/upsert": {
+      "post": {
+        "summary": "Upsert: Create or update host(s)",
+        "description": "Upsert: Create or update host(s)",
+        "operationId": "SGroupsHostsAPI_Upsert",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1HostRespUpsert"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1HostReqUpsert"
+            }
+          }
+        ],
+        "tags": [
+          "Host"
+        ]
+      }
+    },
+    "/v1/host/watch": {
+      "post": {
+        "summary": "Watch: Watch host(s)",
+        "description": "Watch: Watch host(s)",
+        "operationId": "SGroupsHostsAPI_Watch",
+        "responses": {
+          "200": {
+            "description": "A successful response.(streaming responses)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "result": {
+                  "$ref": "#/definitions/v1HostRespWatch"
+                },
+                "error": {
+                  "$ref": "#/definitions/rpcStatus"
+                }
+              },
+              "title": "Stream result of v1HostRespWatch"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1HostReqWatch"
+            }
+          }
+        ],
+        "tags": [
+          "Host"
         ]
       }
     },
@@ -328,7 +546,7 @@
       },
       "title": "AddressGroup: address group to delete"
     },
-    "ListAddressGroupExt": {
+    "AddressGroupRespAddressGroupExt": {
       "type": "object",
       "properties": {
         "metadata": {
@@ -349,6 +567,65 @@
         }
       },
       "title": "AddressGroupExt: extended address group information"
+    },
+    "HostReqDeleteHost": {
+      "type": "object",
+      "properties": {
+        "metadata": {
+          "$ref": "#/definitions/commonMetadataScope",
+          "title": "Metadata: metadata for scoping"
+        }
+      },
+      "title": "Host: host to delete"
+    },
+    "HostReqUpdIPsHost": {
+      "type": "object",
+      "properties": {
+        "metadata": {
+          "$ref": "#/definitions/commonMetadataScope",
+          "title": "Metadata: metadata for scoping"
+        },
+        "spec": {
+          "$ref": "#/definitions/HostReqUpdIPsHostSpec",
+          "title": "Spec: host specification for IP update"
+        }
+      },
+      "title": "Host: host to update IPs"
+    },
+    "HostReqUpdIPsHostSpec": {
+      "type": "object",
+      "properties": {
+        "IPs": {
+          "$ref": "#/definitions/commonIPs",
+          "title": "IPs: list of IPs to update in the host"
+        }
+      },
+      "title": "Spec: host specification for IP update",
+      "required": [
+        "IPs"
+      ]
+    },
+    "HostRespHostExt": {
+      "type": "object",
+      "properties": {
+        "metadata": {
+          "$ref": "#/definitions/commonMetadata",
+          "title": "Metadata: host metadata"
+        },
+        "spec": {
+          "$ref": "#/definitions/sgroupsV1HostSpec",
+          "title": "Spec: host specification"
+        },
+        "refs": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/commonResourceRef"
+          },
+          "title": "Refs: list of resource references in the host"
+        }
+      },
+      "title": "HostExt: extended host information"
     },
     "NamespaceReqDeleteMetadataScope": {
       "type": "object",
@@ -401,6 +678,60 @@
       },
       "title": "FieldSelector: resource field selector"
     },
+    "SpecMetaInfo": {
+      "type": "object",
+      "properties": {
+        "hostName": {
+          "type": "string",
+          "title": "HostName: host name"
+        },
+        "os": {
+          "type": "string",
+          "title": "Os: host operating system"
+        },
+        "platform": {
+          "type": "string",
+          "title": "Platform: host platform"
+        },
+        "platformFamily": {
+          "type": "string",
+          "title": "PlatformFamily: host platform family"
+        },
+        "platformVersion": {
+          "type": "string",
+          "title": "PlatformVersion: host platform version"
+        },
+        "kernelVersion": {
+          "type": "string",
+          "title": "KernelVersion: host kernel version"
+        }
+      },
+      "title": "MetaInfo: represents host meta information"
+    },
+    "UpdMetaInfoHostInfo": {
+      "type": "object",
+      "properties": {
+        "metadata": {
+          "$ref": "#/definitions/commonMetadataScope",
+          "title": "Metadata: metadata for scoping"
+        },
+        "spec": {
+          "$ref": "#/definitions/UpdMetaInfoHostInfoSpec",
+          "title": "Spec: host specification for information update"
+        }
+      },
+      "title": "HostInfo: host to update information"
+    },
+    "UpdMetaInfoHostInfoSpec": {
+      "type": "object",
+      "properties": {
+        "metaInfo": {
+          "$ref": "#/definitions/SpecMetaInfo",
+          "title": "MetaInfo: meta information to update in the host"
+        }
+      },
+      "title": "Spec: host specification for information update"
+    },
     "commonAction": {
       "type": "string",
       "enum": [
@@ -433,6 +764,26 @@
         }
       },
       "title": "FieldSelector: resource field selector"
+    },
+    "commonIPs": {
+      "type": "object",
+      "properties": {
+        "IPv4": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "title": "Ipv4: list of IPv4 addresses"
+        },
+        "IPv6": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "title": "Ipv6: list of IPv6 addresses"
+        }
+      },
+      "title": "IPs: represents list of IP addresses"
     },
     "commonMetadata": {
       "type": "object",
@@ -588,6 +939,53 @@
       },
       "title": "AddressGroup: represents address group resource"
     },
+    "sgroupsV1Host": {
+      "type": "object",
+      "properties": {
+        "metadata": {
+          "$ref": "#/definitions/commonMetadata",
+          "title": "Metadata: host metadata"
+        },
+        "spec": {
+          "$ref": "#/definitions/sgroupsV1HostSpec",
+          "title": "Spec: host specification"
+        }
+      },
+      "title": "Host: represents host resource"
+    },
+    "sgroupsV1HostSpec": {
+      "type": "object",
+      "properties": {
+        "displayName": {
+          "type": "string",
+          "title": "DisplayName: resource display name"
+        },
+        "comment": {
+          "type": "string",
+          "title": "Comment: resource comment"
+        },
+        "description": {
+          "type": "string",
+          "title": "Description: resource description"
+        },
+        "IPs": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/commonIPs",
+            "readOnly": true
+          },
+          "title": "IPs: list of IP addresses associated with the host",
+          "readOnly": true
+        },
+        "metaInfo": {
+          "$ref": "#/definitions/SpecMetaInfo",
+          "title": "MetaInfo: host meta information",
+          "readOnly": true
+        }
+      },
+      "title": "Spec: resource specification"
+    },
     "sgroupsV1Namespace": {
       "type": "object",
       "properties": {
@@ -679,7 +1077,7 @@
           "type": "array",
           "items": {
             "type": "object",
-            "$ref": "#/definitions/ListAddressGroupExt"
+            "$ref": "#/definitions/AddressGroupRespAddressGroupExt"
           },
           "title": "AddressGroups: list of address groups"
         }
@@ -711,7 +1109,7 @@
           "type": "array",
           "items": {
             "type": "object",
-            "$ref": "#/definitions/sgroupsV1AddressGroup"
+            "$ref": "#/definitions/AddressGroupRespAddressGroupExt"
           },
           "title": "AddressGroups: list of address groups"
         }
@@ -747,6 +1145,184 @@
         }
       },
       "title": "Spec: resource specification"
+    },
+    "v1HostReqDelete": {
+      "type": "object",
+      "properties": {
+        "hosts": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/HostReqDeleteHost"
+          },
+          "title": "Hosts: list of hosts to delete"
+        }
+      },
+      "title": "Delete: request to delete hosts",
+      "required": [
+        "hosts"
+      ]
+    },
+    "v1HostReqList": {
+      "type": "object",
+      "properties": {
+        "selectors": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/commonResSelector"
+          },
+          "title": "Selectors: list of selectors"
+        }
+      },
+      "title": "List: request to list hosts"
+    },
+    "v1HostReqUpdIPs": {
+      "type": "object",
+      "properties": {
+        "hosts": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/HostReqUpdIPsHost"
+          },
+          "title": "Hosts: list of hosts to update IPs"
+        }
+      },
+      "title": "UpdIPs: request to update IPs in hosts",
+      "required": [
+        "hosts"
+      ]
+    },
+    "v1HostReqUpdMetaInfo": {
+      "type": "object",
+      "properties": {
+        "hosts": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/UpdMetaInfoHostInfo"
+          },
+          "title": "Hosts: list of hosts to update information"
+        }
+      },
+      "title": "UpdMetaInfo: request to update host meta information",
+      "required": [
+        "hosts"
+      ]
+    },
+    "v1HostReqUpsert": {
+      "type": "object",
+      "properties": {
+        "hosts": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/sgroupsV1Host"
+          },
+          "title": "Hosts: list of hosts"
+        }
+      },
+      "title": "Upsert: request to upsert hosts",
+      "required": [
+        "hosts"
+      ]
+    },
+    "v1HostReqWatch": {
+      "type": "object",
+      "properties": {
+        "resourceVersion": {
+          "type": "string",
+          "title": "ResourceVersion: resource version for watch"
+        },
+        "selectors": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/commonResSelector"
+          },
+          "title": "Selectors: list of selectors"
+        }
+      },
+      "title": "Watch: request to watch hosts"
+    },
+    "v1HostRespList": {
+      "type": "object",
+      "properties": {
+        "resourceVersion": {
+          "type": "string",
+          "title": "ResourceVersion: current global resource revision"
+        },
+        "hosts": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/HostRespHostExt"
+          },
+          "title": "Hosts: list of hosts"
+        }
+      },
+      "title": "List: response for list hosts"
+    },
+    "v1HostRespUpdIPs": {
+      "type": "object",
+      "properties": {
+        "hosts": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/sgroupsV1Host"
+          },
+          "title": "Hosts: list of hosts"
+        }
+      },
+      "title": "UpdIPs: response for update IPs in hosts"
+    },
+    "v1HostRespUpdMetaInfo": {
+      "type": "object",
+      "properties": {
+        "hosts": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/sgroupsV1Host"
+          },
+          "title": "Hosts: list of hosts"
+        }
+      },
+      "title": "UpdMetaInfo: response for update host meta information"
+    },
+    "v1HostRespUpsert": {
+      "type": "object",
+      "properties": {
+        "hosts": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/sgroupsV1Host"
+          },
+          "title": "Hosts: list of hosts"
+        }
+      },
+      "title": "Upsert: response for upsert hosts"
+    },
+    "v1HostRespWatch": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "$ref": "#/definitions/commonWatchEventType",
+          "title": "Type: watch event type"
+        },
+        "hosts": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/HostRespHostExt"
+          },
+          "title": "Hosts: list of hosts"
+        }
+      },
+      "title": "Watch: response for watch hosts"
     },
     "v1NamespaceReqDelete": {
       "type": "object",
